--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "npx vite",
+        "build": "npx vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "npx vite preview"
     },
     "dependencies": {
         "axios": "^1.6.2",
