--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,5 +2,11 @@
     "buildCommand": "npm install && npm run build",
     "outputDirectory": "dist",
     "installCommand": "npm install",
-    "framework": "vite"
+    "framework": "vite",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
+    ]
 }
