--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^1.6.2",
+        "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
