--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "preview": "node node_modules/vite/bin/vite.js preview"
     },
     "dependencies": {
+        "@react-oauth/google": "^0.13.4",
         "axios": "^1.6.2",
         "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
