--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,17 +10,17 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "/logo.png",
+            "src": "/new-logo.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/logo-full.png",
+            "src": "/new-logo.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "/star-logo.png",
+            "src": "/new-logo.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
