Add Google OAuth backend infrastructure and Instagram profile URL field for creators

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,13 @@ EMAIL_PASS=your-app-password
 
 # Frontend URL (for CORS and password reset links)
 FRONTEND_URL=http://localhost:5173
+
+# Google OAuth Configuration
+# Get these from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/oauth/google/callback
+
+# Session Secret for Passport
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+SESSION_SECRET=your_session_secret_here
