--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,20 +10,22 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "/favicon.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/favicon.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        },
-        {
-            "src": "/favicon.png",
+            "src": "/favicon.png?v=2",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+            "src": "/favicon.png?v=2",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/favicon.png?v=2",
+            "sizes": "192x192 512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
