--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.12.0",
+        "react-intersection-observer": "^10.0.2",
         "react-router-dom": "^6.21.1"
     },
     "devDependencies": {
