--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.12.0",
         "react-intersection-observer": "^10.0.2",
-        "react-router-dom": "^6.21.1"
+        "react-router-dom": "^6.21.1",
+        "recharts": "^3.6.0",
+        "socket.io-client": "^4.8.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
