--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.6.2",
         "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
