--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "dependencies": {
         "@react-oauth/google": "^0.13.4",
         "axios": "^1.6.2",
+        "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.3.1",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.12.0",
