Fix production API URL to point to Render backend

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-# Production API URL - Update this with your deployed backend URL
-VITE_API_URL=https://your-backend-domain.com/api
+# Production API URL - Render Backend
+VITE_API_URL=https://thecollabify.onrender.com/api
