Linking custom domain thecollabify.tech to production

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # Production API URL - Render Backend
-VITE_API_URL=https://thecollabify.onrender.com/api
+VITE_API_URL=https://api.thecollabify.tech/api
