feat: add Azure App Service deployment workflow (FREE hosting)

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Backend to Azure App Service
+name: Deploy to Azure App Service
 
 on:
   push:
@@ -11,30 +11,38 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: backend/package-lock.json
 
-      - name: Install dependencies
-        run: |
-          cd backend
-          npm install
-          npx prisma generate
+    - name: Install dependencies
+      run: |
+        cd backend
+        npm ci
 
-      - name: Zip artifact for deployment
-        run: |
-          cd backend
-          zip -r ../release.zip . -x "node_modules/*" ".env"
+    - name: Generate Prisma Client
+      run: |
+        cd backend
+        npx prisma generate
 
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'thecollabify-backend' # Update with actual Azure App Name
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: release.zip
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'thecollabify-backend'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ./backend
+
+    - name: Run Database Migrations
+      env:
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      run: |
+        cd backend
+        npx prisma migrate deploy
