fix: rewrite server.js to start listening before loading complex modules

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend API for Instagram Creator-Seller Promotion Marketplace",
   "main": "server.js",
   "scripts": {
-    "start": "node server-minimal.js",
-    "start:full": "node server.js",
+    "start": "node server.js",
+    "start:minimal": "node server-minimal.js",
     "dev": "nodemon server.js"
   },
   "keywords": [
