--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,3 @@
-# Production API URL - Render Backend
-VITE_API_URL=https://api.thecollabify.tech/api
+# Production Environment - Azure App Service Backend
+VITE_API_URL=https://thecollabify-api-hhc2huheexeqaqff.centralindia-01.azurewebsites.net
+VITE_SOCKET_URL=https://thecollabify-api-hhc2huheexeqaqff.centralindia-01.azurewebsites.net
