--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.3",
     "stripe": "^20.3.0",
+    "uuid": "^13.0.0",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
