--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "@1password/op-js": "^0.1.13",
     "@prisma/client": "5.22.0",
     "@sendinblue/client": "^3.3.1",
+    "@sentry/node": "^10.38.0",
+    "@sentry/profiling-node": "^10.38.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
