--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@react-oauth/google": "^0.13.4",
+        "@sentry/react": "^10.38.0",
         "axios": "^1.6.2",
         "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
