--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,29 +1,40 @@
-# MongoDB Connection - REPLACE WITH YOUR MONGODB ATLAS URI
-MONGODB_URI=mongodb://localhost:27017/collabify
-
-# JWT Configuration - REPLACE WITH A SECURE SECRET
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRE=7d
+# Database Configuration (PostgreSQL)
+# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_URL="postgresql://postgres:password@localhost:5432/collabify"
 
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
+FRONTEND_URL=https://thecollabify.pages.dev
 
-# Email Configuration (for password reset) - REPLACE WITH YOUR CREDENTIALS
+# Security Configuration
+# Generate a strong secret: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRE=7d
+SESSION_SECRET=your_session_secret_here
+
+# Admin Security
+# Comma-separated list of IPs allowed to access admin routes
+ADMIN_ALLOWED_IPS=127.0.0.1,::1
+
+# Email Configuration (SMTP)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 
-# Frontend URL (for CORS and password reset links)
-FRONTEND_URL=http://localhost:5173
+# OAuth Configuration (Google)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CALLBACK_URL=https://thecollabify-backend.azurewebsites.net/api/oauth/google/callback
 
-# Google OAuth Configuration
-# Get these from: https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_CALLBACK_URL=http://localhost:5000/api/oauth/google/callback
+# Payment Gateways
+# Stripe
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+# Razorpay (Legacy/Optional)
+RAZORPAY_KEY_ID=rzp_test_...
+RAZORPAY_KEY_SECRET=your_razorpay_secret
 
-# Session Secret for Passport
-# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-SESSION_SECRET=your_session_secret_here
+# Monitoring (Sentry)
+SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
