--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@sentry/profiling-node": "^10.38.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
+    "connect-timeout": "^1.9.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -34,6 +35,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.7",
     "openpgp": "^6.3.0",
     "passport": "^0.7.0",
