--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
+        "isomorphic-dompurify": "^3.0.0-rc.2",
         "openpgp": "^6.3.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
