--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "start:minimal": "node server-minimal.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [
     "instagram",
@@ -33,6 +34,7 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "node-cache": "^5.1.2",
@@ -40,6 +42,7 @@
     "openpgp": "^6.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.18.0",
     "prisma": "5.22.0",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.3",
