--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -24,13 +24,11 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
 
     - name: Install dependencies
       run: |
         cd backend
-        npm ci
+        npm install
 
     - name: Generate Prisma Client
       run: |
