feat: frontend resilience - axios-retry implementation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@react-oauth/google": "^0.13.4",
         "@sentry/react": "^10.38.0",
         "axios": "^1.6.2",
+        "axios-retry": "^4.5.0",
         "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
