docs: enforce guardian elite setup and remove legacy configs

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "start:doppler": "doppler run -- node app.js",
     "start:minimal": "node server-minimal.js",
-    "dev": "nodemon server.js",
-    "dev:doppler": "doppler run -- nodemon server.js",
+    "dev": "nodemon app.js",
     "postinstall": "prisma generate"
   },
   "keywords": [
