--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,6 @@
-# Sentry Configuration (Optional - for error monitoring)
-VITE_SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+# Production - Azure App Service (Guardian Elite Setup)
+VITE_API_URL="https://api.thecollabify.tech/api"
+VITE_WS_URL="ws://localhost:5000"
 
-# Enable Sentry in development (optional, default: disabled)
-# VITE_SENTRY_ENABLE_DEV=true
-
-# Google OAuth
-VITE_GOOGLE_CLIENT_ID=your-google-client-id
-
-# API Base URL
-VITE_API_URL=https://your-backend-url.azurewebsites.net
+# Optional Analytics
+VITE_GA_MEASUREMENT_ID=""
