--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,40 +1,37 @@
-# Database Configuration (PostgreSQL)
-# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
-DATABASE_URL="postgresql://postgres:password@localhost:5432/collabify"
+# Database Configuration
+DATABASE_URL="postgresql://user:password@host:port/database?sslmode=require"
+MONGODB_URI="mongodb+srv://user:password@host/database"
+
+# Authentication
+JWT_SECRET="your-secure-jwt-secret-at-least-32-chars"
+JWT_EXPIRE="7d"
+
+# Session Management
+SESSION_SECRET="your-secure-session-secret"
+
+# Google OAuth
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GOOGLE_CALLBACK_URL="https://your-domain/api/oauth/google/callback"
+
+# Push Notifications (VAPID)
+VAPID_PUBLIC_KEY="your-vapid-public-key"
+VAPID_PRIVATE_KEY="your-vapid-private-key"
+VAPID_EMAIL="mailto:your-email@example.com"
+
+# Email Service (SMTP)
+EMAIL_HOST="smtp.example.com"
+EMAIL_PORT="587"
+EMAIL_USER="your-email@example.com"
+EMAIL_PASS="your-email-password"
 
 # Server Configuration
-PORT=5000
-NODE_ENV=production
-FRONTEND_URL=https://thecollabify.pages.dev
+PORT="8080"
+NODE_ENV="development"
+# Frontend URL - Azure App Service (Guardian Elite Setup)
+FRONTEND_URL="https://www.thecollabify.tech"
 
-# Security Configuration
-# Generate a strong secret: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
-JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRE=7d
-SESSION_SECRET=your_session_secret_here
-
-# Admin Security
-# Comma-separated list of IPs allowed to access admin routes
-ADMIN_ALLOWED_IPS=127.0.0.1,::1
-
-# Email Configuration (SMTP)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
-
-# OAuth Configuration (Google)
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_CALLBACK_URL=https://thecollabify-backend.azurewebsites.net/api/oauth/google/callback
-
-# Payment Gateways
-# Stripe
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
-# Razorpay (Legacy/Optional)
-RAZORPAY_KEY_ID=rzp_test_...
-RAZORPAY_KEY_SECRET=your_razorpay_secret
-
-# Monitoring (Sentry)
-SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
+# Optional / Recommended
+SENTRY_DSN=""
+STRIPE_SECRET_KEY=""
+ADMIN_ALLOWED_IPS="127.0.0.1,::1"
