--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,3 +4,6 @@ VITE_WS_URL="ws://localhost:5000"
 
 # Optional Analytics
 VITE_GA_MEASUREMENT_ID=""
+
+# Error Monitoring (Sentry)
+VITE_SENTRY_DSN=""
