--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,8 @@
     "pg": "^8.18.0",
     "prisma": "5.22.0",
     "socket.io": "^4.8.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
     "web-push": "^3.6.7"
   },
