feat: implement centralized redis integration and socket adapter

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,5 +33,9 @@ FRONTEND_URL="https://www.thecollabify.tech"
 
 # Optional / Recommended
 SENTRY_DSN=""
+
+# Redis Configuration (High-performance caching & Socket.io scaling)
+# For Azure: rediss://:<key>@<hostname>:<port> (Note: 'rediss' with double 's' for TLS)
+REDIS_URL=""
 STRIPE_SECRET_KEY=""
 ADMIN_ALLOWED_IPS="127.0.0.1,::1"
