feat: implement jest/supertest suite and fix app testability

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "start": "node app.js",
     "start:minimal": "node server-minimal.js",
     "dev": "nodemon app.js",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
     "postinstall": "prisma generate"
   },
   "keywords": [
@@ -47,10 +50,13 @@
     "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0",
+    "uuid": "^9.0.1",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^7.2.2"
   }
 }
