--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@sendinblue/client": "^3.3.1",
     "@sentry/node": "^10.38.0",
     "@sentry/profiling-node": "^10.38.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "connect-timeout": "^1.9.1",
