Integrate New Relic Performance Monitoring [Azure Backend]

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,8 +31,13 @@ NODE_ENV="development"
 # Frontend URL - Azure App Service (Guardian Elite Setup)
 FRONTEND_URL="https://www.thecollabify.tech"
 
-# Optional / Recommended
-SENTRY_DSN=""
+# Sentry
+SENTRY_DSN=
+SENTRY_ENV=development
+
+# New Relic
+NEW_RELIC_LICENSE_KEY=
+NEW_RELIC_APP_NAME=TheCollabify-Backend
 
 # Redis Configuration (High-performance caching & Socket.io scaling)
 # For Azure: rediss://:<key>@<hostname>:<port> (Note: 'rediss' with double 's' for TLS)
