--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "newrelic": "^13.13.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.7",
     "openpgp": "^6.3.0",
