chore: implement frontend compatibility fixes and update gitignore

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
 # Database Configuration
 DATABASE_URL="postgresql://user:password@host:port/database?sslmode=require"
-MONGODB_URI="mongodb+srv://user:password@host/database"
 
 # Authentication
 JWT_SECRET="your-secure-jwt-secret-at-least-32-chars"
@@ -42,5 +41,17 @@ NEW_RELIC_APP_NAME=TheCollabify-Backend
 # Redis Configuration (High-performance caching & Socket.io scaling)
 # For Azure: rediss://:<key>@<hostname>:<port> (Note: 'rediss' with double 's' for TLS)
 REDIS_URL=""
-STRIPE_SECRET_KEY=""
 ADMIN_ALLOWED_IPS="127.0.0.1,::1"
+
+# Cloudinary Configuration (For media storage)
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
+
+# Gemini Configuration (For AI content generation)
+GEMINI_API_KEY=""
+
+# VAPID Keys (For push notifications)
+VAPID_PUBLIC_KEY=""
+VAPID_PRIVATE_KEY=""
+VAPID_EMAIL="mailto:thecollabify1108@gmail.com"
