--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,14 @@
   "license": "ISC",
   "dependencies": {
     "@1password/op-js": "^0.1.13",
-    "@prisma/client": "5.22.0",
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^5.22.0",
     "@sendinblue/client": "^3.3.1",
     "@sentry/node": "^10.38.0",
     "@sentry/profiling-node": "^10.38.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.9.0",
     "compression": "^1.8.1",
     "connect-timeout": "^1.9.1",
     "cookie-parser": "^1.4.7",
@@ -41,6 +43,7 @@
     "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "newrelic": "^13.13.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.7",
