fix(audit-v2): resolve all v2 production readiness issues
H6: Fix N+1 query in frictionService.js - batch fetch existing events before loop
M8: Move Google Client ID from hardcode to VITE_GOOGLE_CLIENT_ID env var (main.jsx)
M9: Unify icon system - rewrite CollaborationStepper + MatchExplanation to use Icon.jsx
     - Add 11 new icon paths (handshake, check-circle, comments, file-contract,
       star, times-circle, robot, filter, chevron-down/up) to icons/index.jsx
     - Hardcode all Tailwind color classes (no dynamic interpolation, fixes purge risk)
M10: Remove verbose console.log calls
     - admin.js: user email/role log + bulk deletion count log
     - notifications.js: userId PII logs from push subscribe/unsubscribe
M11: Fix iOS 100vh bug with DVH units (index.css) - webkit-fill-available fallback
M12: Create friction detection cron scheduler (frictionScheduler.js)
     - Runs automatically every 24h + once at startup (30s delay)
     - Wired into app.js startup and graceful SIGTERM/SIGINT shutdown

Missing implementations:
- Wire trackCampaignIntent to POST /api/analytics/campaign-intent endpoint
- Create .env.example entry for VITE_GOOGLE_CLIENT_ID
- Add frictionScheduler import and startup to app.js

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,6 +2,9 @@
 VITE_API_URL="https://api.thecollabify.tech/api"
 VITE_WS_URL="ws://localhost:5000"
 
+# Google OAuth (required for Google Sign-In)
+VITE_GOOGLE_CLIENT_ID="223460533138-nkmmomsvj3nvjd8geg77gdp2rqho3o22.apps.googleusercontent.com"
+
 # Optional Analytics
 VITE_GA_MEASUREMENT_ID=""
 
