--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
     },
     "dependencies": {
         "@react-oauth/google": "^0.13.4",
-        "@react-three/drei": "^10.7.7",
-        "@react-three/fiber": "^9.5.0",
+        "@react-three/drei": "~9.122.0",
+        "@react-three/fiber": "~8.17.14",
         "@sentry/react": "^10.38.0",
         "axios": "^1.6.2",
         "axios-retry": "^4.5.0",
