--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,17 @@
     },
     "dependencies": {
         "@react-oauth/google": "^0.13.4",
+        "@react-three/drei": "^10.7.7",
+        "@react-three/fiber": "^9.5.0",
         "@sentry/react": "^10.38.0",
         "axios": "^1.6.2",
         "axios-retry": "^4.5.0",
         "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
+        "gsap": "^3.14.2",
         "isomorphic-dompurify": "^3.0.0-rc.2",
+        "lucide-react": "^0.575.0",
         "openpgp": "^6.3.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
@@ -28,7 +32,8 @@
         "react-intersection-observer": "^10.0.2",
         "react-router-dom": "^6.21.1",
         "recharts": "^3.6.0",
-        "socket.io-client": "^4.8.3"
+        "socket.io-client": "^4.8.3",
+        "three": "^0.183.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
