--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-# Production Environment - Azure App Service Backend
-VITE_API_URL=https://thecollabify-api-hhc2huheexeqaqff.centralindia-01.azurewebsites.net
-VITE_SOCKET_URL=https://thecollabify-api-hhc2huheexeqaqff.centralindia-01.azurewebsites.net
+# Production Environment - Cloudflare-proxied Azure backend
+VITE_API_URL=https://api.thecollabify.tech/api
+VITE_SOCKET_URL=wss://api.thecollabify.tech
